After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666015 - Missing "workspace-added" signals when moving windows from external application
Missing "workspace-added" signals when moving windows from external application
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-12-12 17:29 UTC by Lionel Landwerlin
Modified: 2011-12-15 15:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.38 KB, patch)
2011-12-12 17:29 UTC, Lionel Landwerlin
needs-work Details | Review
patch v2 (1.58 KB, patch)
2011-12-14 18:05 UTC, Lionel Landwerlin
needs-work Details | Review
patch v3 (1.73 KB, patch)
2011-12-14 19:31 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2011-12-12 17:29:32 UTC
Created attachment 203265 [details] [review]
patch

Using libwnck, an external application can create a new workspace by moving a window into it. In this case we are currently missing a "workspace-added" signal emission.
Comment 1 Owen Taylor 2011-12-13 21:54:05 UTC
Review of attachment 203265 [details] [review]:

Looks fine, except that the i/j usage here is pretty ugly, instead do:

 old_num = i;

once and then 

 for (i = old_num; i < new_num; i++) 

twice.
Comment 2 Lionel Landwerlin 2011-12-14 18:05:38 UTC
Created attachment 203501 [details] [review]
patch v2

Updated patch
Comment 3 Owen Taylor 2011-12-14 18:32:41 UTC
Review of attachment 203501 [details] [review]:

now that the loop are very much for loops, they should be written as for loops
Comment 4 Lionel Landwerlin 2011-12-14 19:31:59 UTC
Created attachment 203511 [details] [review]
patch v3